[tool.poetry]
name = "save-essentials"
version = "0.1.0"
description = "Scrape and download all module content from Cyberstart Essentials."
authors = ["Jeremiah Boby <mail@jeremiahboby.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
